--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router: ^13.1.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -21,8 +22,8 @@ flutter:
 
   assets:
     - lib/config/assets/images/
-    
+
 flutter_icons:
-  image_path: 'lib/config/assets/images/icon.png'
+  image_path: "lib/config/assets/images/icon.png"
   android: true
   ios: true
