--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   go_router: ^13.1.0
   provider: ^6.1.1
+  youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
