--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,13 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.1.4 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   go_router: ^13.1.0
+  google_maps_flutter: ^2.6.0
   provider: ^6.1.1
   youtube_player_flutter: ^9.0.0
 
