--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,6 @@
             android:value="2" />
         <meta-data 
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC8FEBQnT2DlTvfqlYwMfSDwP7bAxVKz-s"/>
+            android:value="@string/GOOGLE_MAPS_API_KEY"/>
     </application>
 </manifest>
