--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_config: ^2.0.2
+  geocoding: ^3.0.0
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
   provider: ^6.1.1
