--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  cloud_firestore: ^4.16.0
+  firebase_auth: ^4.19.0
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
