--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,14 @@ environment:
 dependencies:
   cloud_firestore: ^4.16.0
   firebase_auth: ^4.19.0
+  firebase_core: ^2.28.0
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
   geocoding: ^3.0.0
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
+  google_sign_in: ^6.2.1
   provider: ^6.1.1
   youtube_player_flutter: ^9.0.0
 
