--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_maps_flutter: ^2.6.0
   google_sign_in: ^6.2.1
   provider: ^6.1.1
+  uuid: ^4.3.3
   youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
