--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
+  flutter_riverpod: ^2.5.1
   geocoding: ^3.0.0
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
