--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.16.0
+  equatable: ^2.0.5
   firebase_auth: ^4.19.0
   firebase_core: ^2.28.0
   flutter:
