--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
+  syncfusion_flutter_pdfviewer: ^21.2.10
   flutter_riverpod: ^2.5.1
   geocoding: ^3.0.0
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
   google_sign_in: ^6.2.1
   provider: ^6.1.1
-  uuid: ^4.3.3
+  uuid: ^3.0.7
   youtube_player_flutter: ^9.0.0
 
 dev_dependencies:
@@ -34,6 +35,7 @@ flutter:
 
   assets:
     - lib/config/assets/images/
+    - lib/config/assets/UsoBlockchain.pdf
 
 flutter_icons:
   image_path: "lib/config/assets/images/icon.png"
