--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
-  syncfusion_flutter_pdfviewer: ^21.2.10
   flutter_riverpod: ^2.5.1
   geocoding: ^3.0.0
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
   google_sign_in: ^6.2.1
   provider: ^6.1.1
+  syncfusion_flutter_pdfviewer: ^21.2.10
   uuid: ^3.0.7
   youtube_player_flutter: ^9.0.0
 
@@ -29,6 +29,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
