--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.16.0
+  dart_converters: ^0.0.3
   equatable: ^2.0.5
   firebase_auth: ^4.19.0
   firebase_core: ^2.28.0
+  firebase_messaging: ^14.9.2
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
@@ -19,8 +21,9 @@ dependencies:
   go_router: ^13.1.0
   google_maps_flutter: ^2.6.0
   google_sign_in: ^6.2.1
+  http: ^1.2.1
   provider: ^6.1.1
-  syncfusion_flutter_pdfviewer: ^21.2.10
+  syncfusion_flutter_pdfviewer: ^23.1.39
   uuid: ^3.0.7
   youtube_player_flutter: ^9.0.0
 
