--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,12 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-  cloud_firestore: ^4.16.0
+  cloud_firestore:
   dart_converters: ^0.0.3
   equatable: ^2.0.5
-  firebase_auth: ^4.19.0
+  firebase_auth:
   firebase_core: ^2.28.0
-  firebase_messaging: ^14.9.2
+  firebase_messaging:
   flutter:
     sdk: flutter
   flutter_config: ^2.0.2
