--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services"
 }
 
 def localProperties = new Properties()
@@ -60,10 +61,15 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    android {
+    lint {
+        disable 'MissingPermission'
+    }
+}
+
 }
 
 flutter {
     source '../..'
 }
-
-dependencies {}
