--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_messaging:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_config: ^2.0.2
   flutter_riverpod: ^2.5.1
   geocoding: ^3.0.0
