--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^23.1.39
   uuid: ^3.0.7
   youtube_player_flutter: ^9.0.0
+  percent_indicator: ^4.2.2 
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
