--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   dart_converters: ^0.0.3
   equatable: ^2.0.5
   firebase_auth:
-  firebase_core: ^2.28.0
+  firebase_core: ^3.2.0
   firebase_messaging:
   flutter:
     sdk: flutter
@@ -28,7 +28,9 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^23.1.39
   uuid: ^3.0.7
   youtube_player_flutter: ^9.0.0
-  percent_indicator: ^4.2.2 
+  percent_indicator: ^4.2.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.1.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
